<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_quarteirao"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_alignParentTop="false"
        tools:context="com.ifs.mt.zika_gamification.fragmentos.perguntas_modulo1.etapa_2.P1M1E2">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tb"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/b_a" />


            <TextView
                android:id="@+id/tvP1M1E2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/p1m1e2"
                />

             <RadioGroup
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/radioGroupP1M1E2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginBottom="30dp"
                 android:orientation="vertical">

                 <RadioButton
                     android:id="@+id/rbOpAP1M1E2"
                     android:textSize="18sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/op1p1m1e2" />

                 <RadioButton
                     android:id="@+id/rbOpBP1M1E2"
                     android:textSize="18sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/op2p1m1e2" />

                 <RadioButton
                     android:id="@+id/rbOpCP1M1E2"
                     android:textSize="18sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/op3p1m1e2" />

                 <RadioButton
                     android:id="@+id/rbOpDP1M1E2"
                     android:textSize="18sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/op4p1m1e2" />

             </RadioGroup>




        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <include
            android:id="@+id/tb_bottom_next"
            layout="@layout/toolbar_bottom_avancar" />
    </LinearLayout>


</RelativeLayout>



