<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_quarteirao"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_alignParentTop="false"
        tools:context="com.ifs.mt.zika_gamification.fragmentos.perguntas_modulo1.etapa_1.P5M1E1">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:theme="@style/MyThemeRadioButton"
            android:orientation="vertical"
            android:id="@+id/ll">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tb"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/m4_e1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/black"
                android:text="@string/p5m1e1"
                android:textSize="18sp"/>



            <ImageView
                android:id="@+id/imageViewPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/play_video" />

            <RadioGroup
                android:id="@+id/radioGroupP5M4E1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbOpAP5M4E1"
                    android:textSize="18sp"
                    android:button="@drawable/abc_btn_check_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op1p5m1e1" />

                <RadioButton
                    android:id="@+id/rbOpBP5M4E1"
                    android:textSize="18sp"
                    android:button="@drawable/abc_btn_check_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op2p5m1e1" />

                <RadioButton
                    android:id="@+id/rbOpCP5M4E1"
                    android:textSize="18sp"
                    android:button="@drawable/abc_btn_check_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op3p5m1e1" />

                <RadioButton
                    android:id="@+id/rbOpDP5M4E1"
                    android:textSize="18sp"
                    android:button="@drawable/abc_btn_check_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op4p5m1e1" />

            </RadioGroup>



        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <include
            android:id="@+id/tb_bottom_next"
            layout="@layout/toolbar_bottom_voltar_concluir" />
    </LinearLayout>


</RelativeLayout>



